--- a/excel/pom.xml
+++ b/excel/pom.xml
@@ -30,6 +30,13 @@
             <artifactId>poi</artifactId>
             <version>4.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-beanutils-core</artifactId>
+            <version>1.8.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/commons-beanutils-core-1.8.0.jar</systemPath>
+        </dependency>
     </dependencies>
 
 </project>
