--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
 
 	<modules>
 		<module>excel</module>
+		<module>drools</module>
+		<module>drools-boot</module>
+        <module>drools-decisiontable</module>
     </modules>
 
 	<properties>
@@ -57,6 +60,15 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<!--<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.30</version>
+		</dependency>-->
+		<dependency><!-- For example app logging: configure in src/java/resources/logback.xml -->
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
 		</dependency>
 
 	</dependencies>
