spring自定义标签、自定义editor

--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,13 @@
 		<module>drools</module>
 		<module>drools-boot</module>
         <module>drools-decisiontable</module>
-    </modules>
+        <module>web-socket</module>
+		<module>spring-framework</module>
+	</modules>
 
 	<properties>
 		<lombok.version>1.18.4</lombok.version>
+		<junit.version>4.12</junit.version>
 		<!--<spring-cloud.version>Hoxton.SR5</spring-cloud.version>
 		<spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>-->
 	</properties>
@@ -59,7 +62,11 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
-			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
 		</dependency>
 		<!--<dependency>
 			<groupId>org.slf4j</groupId>
