--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.0.RELEASE</version>
+		<version>2.3.2.RELEASE</version>
 		<relativePath/>
 	</parent>
 
@@ -28,6 +28,9 @@
         <module>gateway</module>
 		<module>spring-boot</module>
 		<module>feign</module>
+		<module>jwt</module>
+		<module>es</module>
+        <module>datasource</module>
     </modules>
 
 	<properties>
